# openai-test

./: main.py  pyproject.toml
newschatbot/: arxiv_client.py  openai_client.py  valueobjects.py
newschatbot/lib/: settings.py
