[tool.poetry]
name = "openai-test"
version = "0.1.0"
description = ""
authors = ["takeshi0406 <sci.and.eng@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
openai = "^0.27.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
