[tool.poetry]
name = "newschatbot"
version = "0.1.0"
description = ""
authors = ["takeshi0406 <sci.and.eng@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
openai = "^0.27.2"
pydantic = {extras = ["dotenv"], version = "^1.10.6"}
retry = "^0.9.2"
feedparser = "^6.0.10"
pytz = "^2022.7.1"
slack-sdk = "^3.20.2"
arxiv = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
